// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionBar Component ActionBar renders 1`] = `
<div>
  <div
    class="container primary CLASSNAME"
  >
    <div
      class="left"
    >
      <div
        class="back"
      >
        <button
          class="button"
          color="reversed"
          tabindex="0"
          type="button"
        >
          <div
            class="icon"
          >
            <i
              class="icon"
              icon="fal,arrow-left"
            />
          </div>
        </button>
        <div>
          BACKTOOLTIP
        </div>
      </div>
      <div
        class="container"
      >
        <h1
          class="typography ellipsis h1 prefix"
          title="PREFIX"
        >
          PREFIX
        </h1>
        <div
          class="hiddenTitle"
        >
          TITLE
        </div>
        <input
          autocomplete="off"
          class="title"
          placeholder="PLACEHOLDED"
          style=""
          tabindex="0"
          title="TITLE"
          type="text"
          value="TITLE"
        />
        <div>
          TOOLTIP
        </div>
        <h1
          class="typography h1 entity"
        >
          - 
        </h1>
        <h1
          class="typography ellipsis h1 entity"
          title="ENTITYID"
        >
          ENTITYID
        </h1>
        <h1
          class="typography ellipsis h1 suffix"
          title="SUFFIX"
        >
          SUFFIX
        </h1>
      </div>
      <div
        class="badges"
      >
        <div
          id="ICON"
        />
        <div
          id="INDICATOR"
        />
        <div
          id="STATUS"
        />
      </div>
    </div>
    <div
      class="right"
    >
      <div
        class="actions"
      >
        <button
          class="button"
          color="secondary"
          data-testid="ACTION1"
          tabindex="0"
          type="button"
        >
          <div
            class="label"
          >
            action1
          </div>
        </button>
      </div>
      <div
        class="separator"
      >
        <i
          class="icon"
          icon="fal,pipe"
        />
      </div>
      <div
        class="basicActions"
      >
        <button
          class="button"
          color="reversed"
          data-testid="BASICACTION1"
          tabindex="0"
          type="button"
        >
          <div
            class="label"
          >
            basicaction1
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActionBar Component ActionBar renders with actions without label, empty basicactions 1`] = `
<div>
  <div
    class="container secondary"
  >
    <div
      class="left"
    >
      <div
        class="container"
      >
        <div
          class="hiddenTitle"
        >
          TITLE
        </div>
        <input
          autocomplete="off"
          class="title"
          readonly=""
          style=""
          tabindex="-1"
          title="TITLE"
          type="text"
          value="TITLE"
        />
      </div>
    </div>
    <div
      class="right"
    >
      <div
        class="actions"
      >
        <button
          class="button"
          color="secondary"
          tabindex="0"
          type="button"
        >
          <div
            class="icon"
          >
            <i
              class="icon"
              icon="fal,gear"
            />
          </div>
        </button>
        <div>
          TOOLTIP
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActionBar Component ActionBar renders without action, basicactions, icon, indicator or status 1`] = `
<div>
  <div
    class="container primary CLASSNAME"
  >
    <div
      class="left"
    >
      <div
        class="back"
      >
        <button
          class="button"
          color="reversed"
          tabindex="0"
          type="button"
        >
          <div
            class="icon"
          >
            <i
              class="icon"
              icon="fal,arrow-left"
            />
          </div>
        </button>
        <div>
          BACKTOOLTIP
        </div>
      </div>
      <div
        class="container"
      >
        <h1
          class="typography ellipsis h1 prefix"
          title="PREFIX"
        >
          PREFIX
        </h1>
        <div
          class="hiddenTitle"
        >
          TITLE
        </div>
        <input
          autocomplete="off"
          class="title"
          placeholder="PLACEHOLDED"
          style=""
          tabindex="0"
          title="TITLE"
          type="text"
          value="TITLE"
        />
        <div>
          TOOLTIP
        </div>
        <h1
          class="typography h1 entity"
        >
          - 
        </h1>
        <h1
          class="typography ellipsis h1 entity"
          title="ENTITYID"
        >
          ENTITYID
        </h1>
        <h1
          class="typography ellipsis h1 suffix"
          title="SUFFIX"
        >
          SUFFIX
        </h1>
      </div>
    </div>
    <div
      class="right"
    />
  </div>
</div>
`;
